--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
           <div class="Beauty_Selling">
         
             <h1 class="font70">
-              Beauty Selling <span class="dot">with</span> Digital Pattern<span
-                class="dot"
+              Beauty Selling <span class="pink">with</span> Digital Pattern<span
+                class="pink"
                 >.</span>
                
             </h1>
